fix spacing issues

--- a/src/styles/swiper.scss
+++ b/src/styles/swiper.scss
@@ -3,7 +3,7 @@ div:has(> .swiper) {
   .swiper {
     @apply static;
     .swiper-pagination {
-      @apply -bottom-9;
+      @apply bottom-0;
       .swiper-pagination-bullet {
         @apply w-3 h-3 bg-purple-800;
       }
